# TurtLSystems

./: .gitignore  .pre-commit-config.yaml  README.md  coverage.txt  defaults.py  docstringtotable.py  examples.py  pyproject.toml  readme_examples.py  requirements.txt  setup.cfg  setup.py  test.py  tox.ini  turtlsystem.py
examples/: readme_examples.py
src/TurtLSystems/: __init__.py  core.py  defaults.py  examples.py  source.py  turtlsystems.py
tests/TurtLSystems/: test_arguments.py  test_instructions.py
