[metadata]
version = 0.1.2
name = TurtLSystems
author = discretegames
author_email = discretizedgames@gmail.com
url = https://github.com/discretegames/TurtLSystems
description = A tool to draw L-systems with turtle graphics and output them as pngs and gifs.
long_description = file: README.md
license = MIT
license-file = LICENSE.txt
project_urls =
	GitHub = https://github.com/discretegames/TurtLSystems
	PyPI = https://pypi.org/project/TurtLSystems
	TestPyPi = https://test.pypi.org/project/TurtLSystems
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Artistic Software
	Topic :: Education
	Topic :: Multimedia :: Graphics
	Topic :: Multimedia :: Graphics :: Editors :: Vector-Based
	Topic :: Scientific/Engineering :: Mathematics
	Topic :: Scientific/Engineering :: Visualization
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	License :: OSI Approved :: MIT License
	Typing :: Typed
keywords =
	lsystem
	lindenmayer
	systems
	fractal
	pattern
	art
	animation
	png
	gif
	turtle
	graphics
	Sierpinski
	Koch
	dragon
	Cantor


[options]
package_dir=
    =src
packages = find:
zip_safe = True
install_requires = Pillow>=6.2.0

[options.packages.find]
where=src

[flake8]
max-line-length = 120